--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.8.0",
-    "react-app-rewired": "^1.5.2"
+    "node-sass": "^4.9.3",
+    "react-app-rewired": "^1.5.2",
+    "sass-loader": "^7.1.0"
   }
 }
